--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto fw-bold">
-                    <li class="nav-item"><a class="nav-link top" href="#about">Profile</a></li>
+                    <li class="nav-item"><a class="nav-link top" href="#about">Tentang Kami</a></li>
                     <li class="nav-item"><a class="nav-link top" href="#services">Layanan Kami</a></li>
                     <li class="nav-item"><a class="nav-link top" href="#gallery">Galeri</a></li>
                     <li class="nav-item"><a class="nav-link top" href="#outlets">Cabang Kami</a></li>
@@ -43,7 +43,6 @@
         </video>
         <div class="header-content d-flex justify-content-center flex-column align-items-center">
             <img src="src/brand.png" alt="A2Garage Logo" class="w-75 p-2">
-            <div class="divider py-1 bg-danger w-25 rounded"></div>
             <p class="p-3">Spesialis Tuner Mesin & Custom Body Kit</p>
         </div>
     </header>
@@ -55,7 +54,7 @@
             </div>
             <div class="content-about text-center">
                 <img src="src/gear.gif" alt="Gear Animation" class="gear-animation">
-                <h2 class="p-3 fw-bold">About Us</h2>
+                <h2 class="p-3 fw-bold">Tentang Kami</h2>
                 <p>A2Garage is an automotive workshop specializing in body kits and car engine tune-ups. We provide a
                     wide selection of world-class body kits as well as a wide range of car engines and their supporting
                     components.</p>
@@ -242,7 +241,7 @@
         $(document).ready(function () {
             setTimeout(function () {
                 $('#welcome-screen').addClass('hide');
-            }, 5000);
+            }, 2000);
 
             function updateNavbar() {
                 if ($(window).width() < 992 || $(window).scrollTop() > 0) {
